--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html><html lang="ja"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width"><link rel="icon" href="data:">
+<title>宮城県観光施設マップ</title></head><body>
 <h1>宮城県観光施設マップ</h1>
 
 <script type="module" src="https://code4fukui.github.io/csv-map/csv-map.js"></script>
@@ -23,3 +24,4 @@ td, th {
 <hr>
 DATA: <a href=https://miyagi.dataeye.jp/datasets/301>【宮城県】観光施設一覧 | データカタログ | 宮城県及び市町村共同オープンデータポータルサイト</a><br>
 <a href=https://github.com/code4fukui/opendata-miyagi/>src on GitHub</a><br>
+</body></html>
